# rustgames

./: README.md
ballgame/: Cargo.toml
ballgame/src/: main.rs
function_drawer/: Cargo.toml
function_drawer/src/: consts.rs  draw.rs  function_creater.rs  function_text.rs  main.rs
shooting_game/: Cargo.toml
shooting_game/src/: collision_check.rs  draw.rs  main.rs
shooting_game/src/constants/: consts.rs
shooting_game/src/functions/: ball_struct.rs  funcs_box.rs  mod.rs  update_balls.rs
