[package]
name = "function_drawer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "3.7" }
rand = "0.8.4"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rust_math = "0.3.6"